# prompt_ide-project

./: .coveragerc  .gitignore  LICENSE.txt  MANIFEST.in  README.rst  app.py  app.sqlite  poetry-lock-hash.json  prompt_ide_db.sqlite  pyproject.toml  pyproject_ops.json  release-history.rst  requirements-dev.txt  requirements-doc.txt  requirements-test.txt  requirements.txt  setup.py  test.py
.github/workflows/: main.yml
docs/: Makefile  make.bat
docs/source/: conf.py
prompt_ide/: constants.py  db_model.py
prompt_ide/app/: api_client.py  api_manager.py  create_app.py  init_app.py  model.py  sqlite_db.py
tests/: all.py  test_api.py
